# cw_4

./: README.md  main.py  pyproject.toml  settings.py  utils.py
services/: JSONSaver.py  JsonDataService.py  api.py  api_abc.py  api_hh.py  api_sj.py  user.py  user_interaction.py  vacancies.py  vacancy.py
services_1/: JSONSaver.py  api_abc.py  api_hh.py  api_sj.py  user.py  vacancy.py
temp_services/: data.py
